--- a/Amar.DocumentDatabase/Views/Test/Details.cshtml
+++ b/Amar.DocumentDatabase/Views/Test/Details.cshtml
@@ -9,10 +9,9 @@
 <fieldset>
     <legend>Test</legend>
 
-    <
-     class="display-label">
+    <div class="display-label">
          @Html.DisplayNameFor(model => model.Name)
-    </>
+    </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Name)
     </div>
